[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/Effects/Materials/FireExplosionParticleMaterial.tres" type="Material" id=1]
[ext_resource path="res://src/Effects/Materials/FireExplosion3.tres" type="Material" id=2]
[ext_resource path="res://src/Effects/Materials/FireParticles.tres" type="Material" id=3]
[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=4]
[ext_resource path="res://src/Effects/Textures/fire_dash_charged.png" type="Texture" id=5]
[ext_resource path="res://src/Sounds/Rooster - Wallhit.ogg" type="AudioStream" id=6]
[ext_resource path="res://src/Effects/Textures/fire_circle.png" type="Texture" id=7]
[ext_resource path="res://src/Effects/Fire/fire2.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Player/BossWeapons/FireDash/FireDashCharged.gd" type="Script" id=9]
[ext_resource path="res://src/Effects/Materials/FireExplosionMaterial2.tres" type="Material" id=10]

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 96, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 96, 64, 96, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 96, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 96, 128, 96, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 28.0
} ]

[sub_resource type="CircleShape2D" id=28]
radius = 46.0435

[sub_resource type="CanvasItemMaterial" id=21]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=29]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="FireDashCharged" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 10
collision_layer = 4
collision_mask = 0
script = ExtResource( 9 )
damage = 15.0
damage_to_bosses = 15.0
damage_to_weakness = 20.0
break_guards = true
pop_in_time = 0.0
has_deflectable = false

[node name="animatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
frame = 4
playing = true

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource( 28 )

[node name="fire2" type="Particles2D" parent="."]
modulate = Color( 1, 0.662745, 0.662745, 1 )
material = SubResource( 21 )
z_index = -1
amount = 12
lifetime = 0.35
local_coords = false
process_material = ExtResource( 3 )
texture = ExtResource( 8 )

[node name="disabler" type="Node" parent="fire2"]
script = ExtResource( 4 )
fade_out = true

[node name="wallCheck_right" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 32, 0 )
collision_mask = 769

[node name="wallCheck_left" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( -32, 0 )
collision_mask = 769

[node name="wallCheck_down" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 32 )
collision_mask = 769

[node name="wallCheck_up" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -32 )
collision_mask = 769

[node name="Fire" type="Particles2D" parent="."]
pause_mode = 2
material = SubResource( 29 )
z_index = 10
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 1.0
local_coords = false
process_material = ExtResource( 2 )
texture = ExtResource( 8 )

[node name="Explosion" type="Particles2D" parent="."]
pause_mode = 2
material = ExtResource( 10 )
z_index = 10
emitting = false
amount = 1
one_shot = true
local_coords = false
process_material = ExtResource( 1 )
texture = ExtResource( 7 )

[node name="wallhit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0
pitch_scale = 0.75
max_distance = 900.0
bus = "SFX"
